[package]
name = "soroban-snooker"
version = "0.1.2"
edition = "2021"
authors = ["Fred Kyung-jin Rezeau <fred@litemint.com>"]

[package.metadata]
license = "MIT"
repository = "https://github.com/fredericrezeau/soroban-snooker"
homepage = "https://litemint.com"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "20.0.0"

[dependencies.soroban-kit]
version = "0.1.7"
default-features = false
features = ["storage"]

[dev_dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
