[package]
name = "soroban-snooker"
version = "0.1.3"
edition = "2021"
authors = ["Fred Kyung-jin Rezeau <fred@litemint.com>"]
description = "A smart contract showcasing web3 gaming with Soroban on Stellar"
repository = "https://github.com/fredericrezeau/soroban-snooker"
keywords = ["web3", "soroban", "stellar", "nft", "gaming"]
license-file = "LICENSE"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "20.3.1"

[dependencies.soroban-kit]
version = "0.1.10"
default-features = false
features = ["storage"]

[dev_dependencies]
soroban-sdk = { version = "20.3.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
